Updated the About window of WinHSPF 3.1.

--- a/WinHSPF/frmAbout.resx
+++ b/WinHSPF/frmAbout.resx
@@ -125,7 +125,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABs
-        kQIAAk1TRnQBSQFMAgEBAwEAARwBAAEcAQAB+gEAAXIBAAT/AREBAAj/AUIBTQE2BwABNgMAASgDAAHo
+        kQIAAk1TRnQBSQFMAgEBAwEAASwBAAEsAQAB+gEAAXIBAAT/AREBAAj/AUIBTQE2BwABNgMAASgDAAHo
         AQMCAAFyAwABAQEAARAFAAGgAXoBA/8A/wD/AP8A0QAB/wF/Af8BfwH/AX8B/wF/Af8BfwHeAXsBOQF7
         AXIBdgGsAXUBKAF1AeUBdAHlAXQB5QF0AeUBdAHlAXQB5QF0AeUBdAHlAXQB5QF0AeUBdAHlAXQB5QF0
         AeUBdAHmAXQBSQF1AdYBdgG9AXsB/wF//wD/AP8A/wD/AP8A/wB/AAH/AX8B/wF/Af8BfwH/AX8B/wF/
@@ -2939,6 +2939,113 @@
   <metadata name="txtLabel.Locked" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="PictureBox1.ErrorImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAUAAAADMCAMAAAA1S4qPAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAnUExURf///6CQkIAAAAAAAAD//4CAgBAQEM/PwICAAP8AAP//AACAAAD/AD5GHNUAAAAJcEhZ
+        cwAACxAAAAsQAa0jvXUAAAAVdEVYdENyZWF0aW9uIFRpbWUAB9UDEA8NEZjd8IEAAAAHdElNRQfVAxAP
+        DTuWZ9onAAAXB0lEQVR4Xu1dDZvcJg+83CZNcun//73vjDSAAOGPXV/SvvXo0WEwyDAey+zdNn27cePG
+        jRsX4PHQwY3ncBP4Im4CX8RN4Iu4CXwND0CHN57BTeCLuAl8ESTwZvAABpJq1Qi8GZwxcjKQVKrO303g
+        hJGTgaRaNfoAr1lVh46p4b+CcdkDD7VKgnbhXTfxf0fzuOyhXqvkR/j1999vcrUQqFtZO9uwHtaenvn3
+        YljPuMBatRPAr7dNUy/BRjZ44/u/nMF+9lyRDg22RB0Tqlqz49ffZIr6S0v0+Hijee8YDJV3w9B+LSx4
+        gJqvQ41oB+M1srqKAvK0NPT+eHuXa0CJ93j8BHs/1WjQmSuhyBVqvgwtpJXTNayhtpSalwbLfSt/fHy4
+        /j4w2FyjHEV+EiFhlxGmBsHaBTWtoX4Var4MLaQdjBfxeugzIeptssfbT2ivuOvwhwYCP99/kjr8pA7Z
+        n5guZJcmVB+hsznUp0LNl6GGtAO7BOBN4epjPYJaI1tzyed3thDFFEgdmgRtnLXzWHFUDVMZrmNta9iY
+        ADVfhhqTJSsOa9qod+BqMoPEOu25a5DDCWQuRCWOjeZdgdDWWZlfBg2tUPNlqDFZsuKwpjDzrjYiz39Y
+        18fbT+bAmAc1JMIUCALTGMd8gxddpELNl6HGZMmKwVoAVXcQtBANYVr+c9eAHsyEzIVhnI5OWJvzAF0E
+        8Iq3XgdF9uu0q9m5nsCWnyZk+c93ML2p+4CqQI1jvyTeTqlgG/D1+MIug4dGVC/sp6EnD8AsdZSAaxgM
+        rb3+VvzVHFhHgutlPlwbQ8U6zeL30MIvgoJ21C1BTlaY8xIakfuYA4tn+Y+oCixjyaCOrUNpf8otQoBW
+        fhEU9BiB6z7hngfDp9xOg+o8Y8iB2v14DH/yy5knTNeo0MovgoIyrA4Chpu3yTHnyvvtJfMleKCujAt7
+        D6tnAimwjrfPL9rvGYMY6/E1YMx/W6WGVHSLfh0KdUiBW8B8Za1GZYGXPf0BfQ6UAksUY1A13Y94vT3T
+        JQBf7j+UwJJzumNTFpixHGjdVmCvPgd+4D1idXBG/X6AM8a0Yz7V6rvrfgFCy21LdQpegOI8jxqh3O/H
+        16ANz20wELR5Le/TRhaddbVeg/XsaB5xA6GHaHgeivMkSp7hseebh/FX848USIAkG5PDe7Q86k8tNWfx
+        I2PSYKjHfIfSI24gaFI0PA/FeRqccbDHX1//im2WA6trTAaeR1FHRoZmzW1r0CNuwO+4QTQ8D8V5FkO+
+        eXz9+rVrCwoENCiDTtdxnudK3d7JlveG+keWBxlvc22IX2AkvACFeRrhvtMeX/+KGRCmT7luGpSB51GU
+        UVLYWJ+yYO0RjfE2F3edAhXlefCec85emgD7fMSnuEKDMui04pCbqi/E8XcyW6HJpN7nQY+4Aec4h5g5
+        CA16BZh1NRDYZUCZ/91jm0DB+5u2aCX6AQUqwCGE3tsjRdMa6vcScM953+EUoL2DVW8uFWrEBti35jft
+        +7o2z3lJHwU4hJAD+3l2rh6iKoN6vAgpAMYMmCmQVv72McPOS3s8AivFaqyqOLU0BdY+inYIobdGrwx9
+        1wwqxFPAGoSQf6TAWu9LqFBDiPm8lWKG2gr5DYJTu8YVltFermdBDy4q7gPzebTSouZQiENAvHiPGX82
+        ErhSIGxzLK38/b2YXZUW2tWz1jsFHl1UWItGb9iSQTz/CpKh5QCA96L5WK++zoFyhsra6ThX85p77Vve
+        uXD1/y05sPiCQXKvIDMa+7Emcz0mNuZAH73qHY29wEa0Ni7or7S13q3XCYTeGr1l6J8Bz7diZCD3NhZg
+        FNWtZEuse4lWV2Bod02RH6vP4yy+nlz2bWXb3xX+2F7npXrMkydQ721EnFdfpgzyzmlkCo5WDzsKVs92
+        hn5zDhx0ZeGE2D5ZuELQX813reVlBTYoTmIZgfbsa+QK/vx7GZxNsS5HvyQHmrpMhye8ix/PlXawX/uW
+        fpzWUaR6VZzMZwbRm6ahC5Qe+MncVu4RmzQ+Wu0X2mhRQYesi93pr51pbaVlTw0d0t41UmIzgWwFtxqb
+        w7kHWFJcri9r0viQL+y+Wo++vear4rRlychtfN3X8HzJf/p7ibeT03J9TBQrKwiHE6pejQthnHcsvWfA
+        yLdidAjt3gfvWOS4r2wo45pZLxA4/jYGdlSD9UplXJcn2zVDvNDfRh8k0HvzIIyokTKbCeyfc8XoENtr
+        P0rM0I+3GUmnY860c6aZDWfIYVw3xp+HqT2MYYRnYYyU+Kk71w0j3wo0oNynvreaeMVgbLAcuPgswvNY
+        c2I808eCoaXrE86E9nglC/MkEkYGmwj8iVvKM+T3wLW7vGAtLsXabm24jkmwxB1L60Rw7QVJP0RDD2qM
+        Rv218yH/kb82TuGeRzKPUA4M8jtTGIMzNA+wBe/X9/Z8qFZvUp6c9DQauobaaIgjjmTxXGjvY/gMXkCI
+        ldhIoH9XhfcfHCvCjJJYeB+Kq8lhgvMcQehl3fU/6YhiGmse89yi/W8c+wxOwrgQSqyF9wzW7y1z3JLB
+        1t7uxNAGDpH1cGRNqOdZcO/+0hgAzIwWRi7eyh7dJnAWxoXQ4qU2EPjzw74rBaO+FGJAbGcM3ocwz5If
+        XIYG3CdJsPb30k+3+lDynM1Gc2olr1z6xXbyp3bF9Us8BzKyuQ+0+E6do/veqKJMiHcVccxUNZQ247C0
+        mCJLFuz6fNh3Y2q9mI0TL6MN44PVOPV7EBan6ekUbFyJuLJRgfq+HlxRtqFcoJoh5gg1YR0mwa8lb3R9
+        XD/qKmgOmcfcW9/L5jWuvgfBYwbjyp5GvdbCBwVW/W1/Z6qh3AlVhzumNjIYsmAb5ebfFcwy3WgIFcb1
+        2Q81teJa87yeheIsze5PweOn68/ncwg1H6je5Tk1AV9/uQTZjqrOt352PWmJcE3Raolhff5xxst5Wynb
+        KXbwp3529U9AnUdP4JEc2ANRzFQdFFLxFxgse0HWYy+adXImMstGxPNd9sN1Wm8L/Ako8XFlkUfUHEhX
+        zz3gXtt9r2j5QQ0OE6DeKjV3BkcjeKCegnvnGNN9zJEtnl1nNYdzICFelJKFUOJjLuwg9P/92uK/3Rig
+        O6EaoDvTtbGX7w3tN4hA6yXzZvBRLevlFnvRWj+7RlSrh30KJMSLUrIQavxRgS0H2sx28Yv3QscC7gtj
+        x/vvdZOhWqb9Fdv6z9/9eZWTTvl8t/PSX+z/OajxBwVG/b1b7tnDr/DJRMDsZWpo9wsK8Zb2eVnGxlhP
+        DD2Msc66UabxcP3x3l6HGj/PgX5vqdkqIl+hHQ6Y8gzvjbnqwJSTTIulX21v9cF5sswrehdDCTCOm+Z2
+        FWr8QYFRf/RwN511jY+Y28oYVQm1wNTAbIWffWupVfPm1fu5Ux9iTPpL53sJavxBgWEfaNblE5YaH5HM
+        Uv1VI2oc1QHKxVJii9uu46W3SnuESm+O80KpgHF8Ot9LoPjIKZs5sPxeJpgCBCR3mT11WKDxqhmwXPt7
+        Cg4V1/s0U4uf8zvqx7VHMI83nPP+10PxMas0BzYdMg+Sb97TRUJJmtlfhxUWQ8cCFeNQw7g/bLkmajR3
+        CXBo91HXQ/HB3nYO/Hj7AY4tV5Pvo2BvHTZMEXzX5qYm71VtrG9Z/jtHD3o9LLrtCgYFDjkQxn9Twwed
+        uJ8WfcCkh5q3mgLRi/eWs5N+uvpGqUhjfw96PSz+yF+WA+U0DT0ErmgEV6VDA+togW4Cf52CxvqWWZzf
+        rED7dx7EnWHaB86u8bvI3n/URBSh1U07anC0HMZaOd7zqsC+3SK+giFedONoUGDUX9PgYAi7/2zkChxa
+        XSUxFnSEn6Hdj/ZN+fRyBYZYg2HPBzYGBY77QBm1Fw1x+8+th8C8oUOB95FzURWQjhhfq+f50m+jLCOH
+        dgvxCpLrPb59Q1n2VU6dI8+BeA9bSb5rWVXS6WcHC1V2MbQ3tP2cNajHnn1WDgyxYI9vbjgSP3kObDoc
+        c2DzlsNewhTDhGTwep93lv4bcuA3MPft7e3bt2+o6/caA4Gd/lyD1N/CGF2XeQG8szo0eC6jqcF67Non
+        50BXnrME/VGBaQ5c7ANXpou8hDlPuZaKAgnOmBrYKMuomle9VIDnwTjGHsUHmP54PXFwIAfSaSy7PAjX
+        VZ4HVqqjAObAoED+8hD9tk050HJnMEU4izrelSd7s59+ZjsHrveBo+uCLyBfI7XU4NrazIdVgck5dw91
+        DD4GbFne67zEs98RUXQBB/eBZtQgTVd8AfPKcId1JLgiqa8xx1WrfdY9TsD6g69irj1ajcc9H9cv7gyH
+        94HReD3eE7vwJfD8pQohcRmsgee5ilDWTnyGk/Pn9q017xlrpEb1Fi/dB07/phU93QeG0r7DgKgwu/jr
+        sFhBMWVvKGeTXy9YyYHOYGYWaoHYj+Z8uRkzfhx68PsUXH9HoD3XNQ+ajTlv4ZrHZbA8o+NegYA1lDxV
+        vHUq+9PRFSzF0DfmPCyvHHd9/D08Ehj15xrc2AdORk0e+2vyLnCPdURAWcFUH3Tjvw+086E1mGKliP36
+        N++jqTH2gfGN0T/BIPDHnAOpsbOmab0Cfv+4QeIyxDr7QQ+2HjUBc/5jaYEWiP3El/JfK6d4tlInrqJ/
+        DyvHGSdeLvPg6JrYhYC2mON8d+has3rNeWTQ20etuNnABUI/8TVZ6yHjW+R9IhDMUYOmwyHPbXrp35eY
+        2lVvFtx3F55XeVSBOnQR2sacdsaV7+BYQD1u+7/qqQK/Y6azBjOj9vZK+oUM0lQZsiINja026+WoRc21
+        3V/Y/xXzfeBIICTo6++taOopW3zWOImWf9QgsS2Q/R7vSOlsWd7Dqq20+tzf94ETgd8fP0b97e4D91wr
+        fgmYdTFvsBJa873f7PPe7pCJMRrUVI9DD5k+C08EgsFn9oGdl3HNfM2vgPfcXQ22d8NPsLXAaj+45SHn
+        uf7kU199DpkVSAbBbdPg+X1g4r7iF6F7r1qoQ2+pndcg2Mot9HGzz2xYW0Ig38SRlV5LT5lW/DKYf3RI
+        1Hy00qE9+dSL+u2W5Iqam8qpf1lbRuD3+nmk5TEaS+opKzdd630dmL+OAKwlWM2HtFaey4TOWGaxF833
+        KlybSBswUJgZqdsr3S/6cAfY5HUM1OUUQ5so7CzpmVogDLzE2kig+MH6UgK/4D1CDuKLYc9L/6z05V4A
+        PDztJdIndXj+INvLZuqbul4YmY9964eNlQJ/+NKLFSqeM624g+UTHR8G848OiSyPrVg8sC8UXTS+g71U
+        fehf3sFLAr9wN1ge4Iv3gbh+NTU9jRirGjls+8Hiq97NnCvZziNcE9yCQPCvdzG1d9bLuGiMCAyPgrU1
+        oE1HRzHEk+MESJuw7F8cTOmR5XzLMb3vZ387MsOebwmshxxesg+UU4vhPg7PYzE1HEIbNRpOQnejbY2g
+        FcVh/Tpyi33QC8z4S2SDPwRoGrzOsC7cQ86C99JIAErdSrUdQhw3l+gg8TV0109K0xyfYCthXu/j1vVs
+        EWgPnT3n6s3SdJSUZ9xW3oHzCqbWA4ACwrjM0MlzIE3lQRVGi+ddgZ4Dtwn89gMEotcRp50tZcgnIb/A
+        nZyj6Mcmnskw69ccjCn3VY/nsYsu25htAvkY4y5rnYNRe3ulu2047Z4ty04TzstxxLG5xd8UyuzpX1tU
+        n1k4V97BnP8egW/I+1TqoJnrLezTRMthlHGbZZoMN8cZb5b/rIzng6b2CWQmxK6aLLpe5vIiL5oQL4fh
+        o3at5MLge2PFnllsDx90jxDIzYdr8KjTSllsrGfm+Uy8HEfLXduebQ53fmeY5kCwUfaBXw8RCCwzYW/U
+        5JbznnnJ/FHySFeKlHMI6ti0JBfu7QwTBfou0OZ8lD/b0USmPtOcE0feOoProj52y1SF25+TlQdDe/t9
+        /XECjUKM6HXUytfdcwpL58Q/B7V2tabguo5asi8EhZvZ0BistfoOxrzOEKjnOOa66LSzpazcz73SyUpA
+        bZxwjDDldfD8u3LkwXaM+WgfCEbOIT5T1N5e6U5zLa1Lv6elzNy5WqCo46iBQtdetB0V6qh8Dqb/dZbA
+        w2+T601MLZHnr3WZqRAyPDD+5wfvu9l5/gDunqgb15fnp8/yoEHxVMBc1oPrO2VGYbcvNApDj9TK52D6
+        UwQCe/tCWimLjfWFlXxXrOZB0VRg+UjHBtbP+kKFad/q7XvkTyrQgBlrZZ1Rk1tOXXk5572xHNxpEoIi
+        vKHVz1myL9zbGZZdIOf1PIHAn8iGoEolVkI9cEWvlZkILReuxvE7ReW5eIlAoxDRYs56xamzvbI5ZcdV
+        yVgdEM5uW7Iv3MqFIQe+yB/AiWJ1Y947WspqnjtWag/WPdVWL+3uaKVmjvhChWnfkANfFaBg8+e6fJVd
+        6U5zDa1Lv6elPOZlP7ZR2rN4wE7kwrAPvIZAgiSCiz9q1ERScmbLfBbKZS4c+/O/J/QrYG99JVyJnq+u
+        crvPL7tzuGvKhb3PKmw58Fr+DCQRK6cNeW6qL6zop1jU04aXvLRy4zDPacFzFQ79Wg78BAIJkkgWqfPR
+        qSsv57w3lsc85LudktOKSkoty4WDfus+8OInuIOR+AezIvVRyuKw7v+lneRBlumHk9iv7gM/kT9DmWfM
+        aVtOneyVVzrnRl4mg+raftDL2LPmwM8mkBCHn7QP3CgPer7XS0QY9pQlB37mExxBBn84j8xurqW5dF2U
+        8pjTjpZLs6k1mMqy3xa2/PnguE95By/xeLz/qDM1FX2CQRdZSb2sSnfcNS/570VAamQpEyHbqcGH7wN/
+        J4ERYtHz2p5TP7/Taa5C/qYr7gfhJWf630T+FH8Oseha6Ez6qFbqLDe86ekCJ1PIdbMKrV1/E/mzBBqM
+        xDn/lfKYez46Vh43qZC5rzNrtxz4hxXYYCwCRXHXGDRSy+Iw6uuYXvltp/TzMdrtu1m/6x18DM4h3tUl
+        763K3+E0lJ7x9Mmk7AdROoO/9R18ENzr+H6n/LUAWshKaqToaFVe4tz7JYmQ8/stu+inAA5pjqCLzKWV
+        Q+Uzxnlkn445r38sgQL2je/vhccGV2Ju0ExWUkur0h1vLS/t3w3ryh+Yg4QXwHn80wlcQDxugpp71mlD
+        CQbDXtAdV9GE/v2ATqnV4E5jQdXZ047nAKT1+D8icA/icYBr7LDNefC/Q+AAaPTHQGqqu5gXcTxp8D9L
+        YALxWHMnbSqn/eDN4IjveLCNyKDD4LcGD+H7F+MQLLrygk158GZwA+TwnfmP+vM8OEvwZnAbpkT9Gzq0
+        aT/4eHxR1xsL+Gehd+XBOw0+CZJIDdpnks5uBg8Duxx8Mh41eBN4AlQhCHTtlfJm8AQsH7ryKm4CzwEc
+        uvKq3QyeBJ/iiJvAsyCBcT94M3gWtwRfxJ0FX8T0Ir4ZPInymZjG8ibwJEYJ3gyexP2J+EVMCrwleAbf
+        wV/dB76pvBk8juSPxLcETwD8hez3BrOjm8GjyPQH3AQeRNEfc5+V0uDN4EEsBAjcDB7B/B2ZN2jQjm4C
+        DyDTHxj0g5vBXUB/2vc1Rw6kBnF8E7iLRIBg700KvCW4h+kzMI1PsGnwzoK7SDOgo6vcyGFvYOa9UFJ7
+        OOWfie8suI10C6hzrsGbwE245npTBlQWvAncQv4ZRCdvBe6DBGrv15zKwznPgTeBm7gV+CLyXWDJgvY7
+        mZvALeQKhARNhXZ8E7gFVyBzXShNe+as3QRuIt8Hyg03gZuYfxdIo/b0G8FbgdtYJMGGm79tgMC6/0v9
+        JnAHYGkL97e09pDuBJs9vqvfjQW2k+Ctv33obyK0qbz5O4K1Bm/+jqH/Zkyzm7/D+C7Jdbj5O4FvSHie
+        +4rf+5eT6L8heNN3Hl/iv+2jthsX4O3tf5foghr/tluLAAAAAElFTkSuQmCC
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>25</value>
   </metadata>
