Sensitivity Routine Updated
The sensitivity analysis routine has been upgraded.
1. The parameter properties are now saved in a class.
2. The format of sensitivity specification file has been changed so that
the same file can be used for uncertainty analysis.
3. The software version has been changed to 1.40 beta.

--- a/HSPEXP/install.txt
+++ b/HSPEXP/install.txt
@@ -1,3 +1,8 @@
+Dated: 6/1/2017
+HSPEXP+1.40beta
+Features:
+1. This is a test version for adding uncertainty and sensitivity analysis.
+
 Dated: 5/9/2017
 HSPEXP+1.32
 Features:
