HSPEXP+ Uncertainty Analysis Changes
1. Echo file name is extracted before calling other utilities.
2. Echo file name is passed to the sensitivity analysis function.
3. Echo file is read to make sure that the simulation completed
successfully.
4. Progress status shows the number of simulations compelted
successfully.

--- a/HSPEXP/install.txt
+++ b/HSPEXP/install.txt
@@ -1,3 +1,9 @@
+Dated: 7/19/2017
+HSPEXP+1.40beta1
+Features:
+1. HSPEXP+ doesn't report the output when runs do not complete.
+2. HSPEXP+ may also display number of simulations complete.
+
 Dated: 6/1/2017
 HSPEXP+1.40beta
 Features:
