--- a/HSPEXP/install.txt
+++ b/HSPEXP/install.txt
@@ -1,3 +1,16 @@
+Dated 7/24/2017
+HSPEXP+1.40beta3
+Features:
+1. Outputs are now in 4 decimal places.
+2. 99.9 and 98 percentile values were missing and have been added.
+
+Dated 7/22/2017
+HSPEXP+1.40beta2
+Features:
+1. Exceedance levels are also output.
+2. A bug was fixed for when a simulation doesn't complete, no output is reported.
+
+
 Dated: 7/19/2017
 HSPEXP+1.40beta1
 Features:
