--- a/HSPEXP/install.txt
+++ b/HSPEXP/install.txt
@@ -1,12 +1,26 @@
+HSPEXP+1.40beta7
+Dated: 02/08/2018
+Features:
+1. Sensitivity and Uncertainty Analysis is named as Multi Simulation Manager.
+2. Multi Simulation Manager can change point source multiplication factors and DSN.
+
+Bugs Fixed:
+1. Multiple bugs fixed, but mainly taken care of the reports with AGCHEM models.
+2. Fixed some older reports as some statistics were not showing.
+
+
+HSPEXP+1.40beta6
 Dated: 01/17/2018
 Features:
 1. Sensitivity/Uncertainty analysis was improved with better error checking and parameter limits.
 2. DO and Heat reports from land surfaces and reach budget reports were added.
 3. Box-Whisker plots were added for DO, Heat, NO3, NH4, PO4, and organic N and P constituents.
 4. Land reports for most constituents were improved so that the vlaues can be easily filtered by the user.
+5. Echo file is opened autimatically if model run does not complete. 
+6. Sensitivity analysis now includes 97.5 and 2.5% percentiles. 
 
 
-HSPEXP+1.40beta5
+
 Dated 11/10/2017
 HSPEXP+1.40beta4
 Features:
