--- a/HSPEXP/install.txt
+++ b/HSPEXP/install.txt
@@ -1,3 +1,20 @@
+HSPEXP+2.0.0beta
+Date: 03/08/2018
+Features:
+1. Multi Simulation Manager is available that can be used for sensitivity analysis, uncertainty analysis, and scenario analysis.
+2. Reports for additional constituents including Heat, DO, BOD-Labile are also generated.
+3. Reach Budget reports for N and P constituents are also generated.
+4. Some reports are now generated so that they can be easily filtered in spreadhseet program as needed.
+5. Monthly land loading reports are also generated.
+6. Box-whisker plots of constituent loading by land use and box-whisker plots of monthly constituent loadings are also produced.
+7. In the Regan plots, daily maximum and daily minimimum DO concentrations are plotted if hourly DO data is available in the binary files.
+8. If GQUAL is simulated, then land loading and reach budget reports for all the GQUAL constituents are available.
+
+Bugs Fixed:
+1. Multiple small bugs fixed. In general, the warning messages do not stop HSPEXP+ calculations. The warning messages are added in the log file.
+2. HSPEXP+ calculations were made more efficient. 
+
+
 HSPEXP+1.40beta7
 Dated: 02/08/2018
 Features:
