--- a/HSPEXP/install.txt
+++ b/HSPEXP/install.txt
@@ -1,3 +1,12 @@
+HSPEXP+2.0beta1
+Date: 03/17/2018
+Features:
+1. In Multi Simulation Manager, range of operations can be provided, separated by hyphen (-)
+
+Bugs Fixed
+1. Some interface fixes.
+2. Some reports were having issues, that has been fixed.
+
 HSPEXP+2.0.0beta
 Date: 03/13/2018
 Features:
