--- a/HSPEXP/My Project/Resources.resx
+++ b/HSPEXP/My Project/Resources.resx
@@ -118,5 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  
+  <data name="HSPFParmValues" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\HSPFParmValues.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="LandUseNames_Mappings" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\LandUseNames_Mappings.csv;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
