--- a/HSPEXP/My Project/Resources.resx
+++ b/HSPEXP/My Project/Resources.resx
@@ -127,4 +127,7 @@
   <data name="LoadingRates" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\LoadingRates.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="MonthlyParmForMonthlyParm" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\MonthlyParmForMonthlyParm.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
