--- a/HSPEXP/My Project/Resources.resx
+++ b/HSPEXP/My Project/Resources.resx
@@ -124,6 +124,9 @@
   <data name="LandUseNames_Mappings" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\LandUseNames_Mappings.csv;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="LimitViolatingParameterTemplate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\LimitViolatingParameterTemplate.xsl;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="LoadingRates" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\LoadingRates.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
