--- a/HSPEXP/install.txt
+++ b/HSPEXP/install.txt
@@ -6,6 +6,8 @@ Features:
 Bugs Fixed:
 1. The expert statistic calculated the years of simulation as an integer. This skewed calculations for models with very small model span. That has been fixed.
 2. The location of help file was not coded properly in the previous version. That has been fixed.
+3. The reports did not include adsorption/desorption and scour/deposition of TAM and PO4. That has been fixed.
+4. The reports did not output labile and refractory organic P data for impervious areas. That has been fixed.
 
 Date: 06/15/2018
 
