--- a/HSPEXP/install.txt
+++ b/HSPEXP/install.txt
@@ -1,8 +1,10 @@
-Date: 2/1/2019
-HSPEXP+3.0beta is the development version for the next version of HSPEXP+.
+Date: 3/13/2019
 
-Features:
-1. This version includes Model QA/QC report. The model QA/QC report is under development and it must be used with extreme caution.
+HSPEXP+3.0 
+
+New Features:
+1. Added Model QA/QC report. See HSPEXP+ documentation.
+2. Added instream model setup for BATHTUB and WASP.  See HSPEXP+ documentation.
 
 Bugs Fixed:
 1. The expert statistic calculated the years of simulation as an integer. This skewed calculations for models with very small model span. That has been fixed.
